@@ -21,8 +21,6 @@
 
 package cascading.flow.stack;
 
-import java.io.IOException;
-
 import cascading.CascadingException;
 import cascading.flow.FlowElement;
 import cascading.flow.FlowException;
@@ -32,6 +30,8 @@ import cascading.pipe.Group;
 import cascading.tap.Tap;
 import cascading.tuple.Tuple;
 import cascading.tuple.TupleEntry;
+
+import java.io.IOException;
 
 /**
  *
@@ -69,11 +69,11 @@ class GroupMapperStackElement extends MapperStackElement
       }
     catch( IOException exception )
       {
-      throw new FlowException( "failed writing output", exception );
+      throw new StackException( "failed writing output", exception );
       }
     catch( OutOfMemoryError error )
       {
-      throw new FlowException( "out of memory, try increasing task memory allocation", error );
+      throw new StackException( "out of memory, try increasing task memory allocation", error );
       }
     catch( Throwable throwable )
       {
