@@ -21,11 +21,21 @@
 
 package cascading.pipe;
 
+import cascading.CascadingException;
 import cascading.flow.FlowCollector;
 import cascading.flow.FlowProcess;
 import cascading.flow.Scope;
-import cascading.operation.*;
-import cascading.tuple.*;
+import cascading.operation.Aggregator;
+import cascading.operation.AssertionLevel;
+import cascading.operation.Buffer;
+import cascading.operation.ConcreteCall;
+import cascading.operation.GroupAssertion;
+import cascading.tuple.Fields;
+import cascading.tuple.Tuple;
+import cascading.tuple.TupleEntry;
+import cascading.tuple.TupleEntryCollector;
+import cascading.tuple.TupleEntryIterator;
+import cascading.tuple.Tuples;
 
 import java.util.Iterator;
 import java.util.Set;
@@ -382,6 +392,10 @@ public class Every extends Operator
         {
         getAggregator().start( flowProcess, operationCall );
         }
+      catch( CascadingException exception )
+        {
+        throw exception;
+        }
       catch( Exception exception )
         {
         throw new OperatorException( Every.this, "operator Every failed starting aggregator", exception );
@@ -397,6 +411,10 @@ public class Every extends Operator
         operationCall.setArguments( arguments );
 
         getAggregator().aggregate( flowProcess, operationCall );
+        }
+      catch( CascadingException exception )
+        {
+        throw exception;
         }
       catch( Throwable throwable )
         {
@@ -414,6 +432,10 @@ public class Every extends Operator
       try
         {
         getAggregator().complete( flowProcess, operationCall );
+        }
+      catch( CascadingException exception )
+        {
+        throw exception;
         }
       catch( Exception exception )
         {
@@ -497,6 +519,10 @@ public class Every extends Operator
       try
         {
         getReducer().operate( flowProcess, operationCall );
+        }
+      catch( CascadingException exception )
+        {
+        throw exception;
         }
       catch( Throwable throwable )
         {
