@@ -1,2 +1,2 @@
-cascading.release.version=1.0.11
+cascading.release.version=1.0.12-dev
 cascading.hadoop.compatible.version=hadoop-0.19.0+
