@@ -1,5 +1,10 @@
 Cascading Change Log
 
+unreleased
+
+  Fixed bug where c.f.s.StackException was being wrapped preventing failures within sink c.t.Tap instances from
+  causing the c.f.Flow to fail. This mainly affected Flows using traps.
+
 1.0.11
 
   Added clearer error message when c.t.Tap is used as both source and sink in a given Flow.
